test/negative/metal_slice_alias_return_escape/compile.hxml
-cp .
-lib reflaxe.rust
-D reflaxe_rust_profile=metal
-D rust_no_build
-D rust_output=out
-main Main
